# rem-status

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/rem_status/: config.py  main.py  models.py  mqtt_client.py  scraper.py
tests/: test_outage_detection.py  test_scraper.py
